@@ -1,3 +1,10 @@
+Tue Dec 04 19:50:40 2012  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c, gtkextra/gtkplotdt.c:  Add SurfacePlotData which
+	  plots 3d graphs from data, so that we can plot all sorts of
+	  surfaces.  Also LinePlotDrawAxisLabels was not added as parameter
+	  by mistake, so add it
+
 Thu Nov 29 23:02:13 2012  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: Add SurfacePlotDrawLegends parameter, also
